package primerproyecto;

public enum TipoDato {
    VOID, 
    INT, 
    DOUBLE, 
    CHAR
}